--- a/slides/css/theme/moon.css
+++ b/slides/css/theme/moon.css
@@ -22,7 +22,8 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 36px;
   font-weight: normal;
-  color: #93a1a1; }
+/*color: #93a1a1;*/
+  color: #CED8D8; }
 
 ::selection {
   color: #fff;
