--- a/slides/css/theme/moon.css
+++ b/slides/css/theme/moon.css
@@ -209,16 +209,19 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #268bd2;
-  text-decoration: none;
+  /*color: #268bd2;*/
+  color: #78b9e6;
+  text-decoration: underline;
   -webkit-transition: color 0.15s ease;
   -moz-transition: color 0.15s ease;
   transition: color 0.15s ease; }
 
 .reveal a:hover {
   color: #78b9e6;
+  text-decoration: none;
   text-shadow: none;
-  border: none; }
+  border: none;
+ }
 
 .reveal .roll span:after {
   color: #fff;
